grafana/base/graf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graf-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.echobase.network
      secretName: graf-prod-tls
  rules:
    - host: dashboard.echobase.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
